HV-1954 Test Hibernate Validator against JDK 22